# dataproxy

./: .bazelrc  .gitignore  .licenserc.yaml  MODULE.bazel  Makefile  pom.xml
.bcr/: config.yml  metadata.template.json
.bcr/dataproxy_sdk/cc/: source.template.json
.circleci/: config.yml  continue-config.yml  release-config.yml
dataproxy-api/: pom.xml
dataproxy-common/: pom.xml
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/exceptions/: DataproxyErrorCode.java  DataproxyException.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/datasource/: DatasourceConnConfig.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/datasource/conn/: OdpsConnConfig.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/serializer/: SensitiveDataSerializer.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/utils/: ArrowUtil.java  AssertUtil.java  EnvVarUtils.java  GrpcUtils.java  IdUtils.java
dataproxy-core/: pom.xml
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/config/: ConfigLoader.java  DefaultFlightServerConfigLoader.java  FlightServerConfig.java  FlightServerConfigKey.java  FlightServerContext.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/converter/: AbstractMultiTypeConverter.java  AbstractValueConverter.java  BigIntVectorConverter.java  BitVectorConverter.java  DataProxyParamConverter.java  DateDayVectorConverter.java  DateMilliVectorConverter.java  Float4VectorConverter.java  Float8VectorConverter.java  IntVectorConverter.java  SmallIntVectorConverter.java  TimeMilliVectorConvertor.java  TimeStampNanoVectorConverter.java  TinyIntVectorConverter.java  ValueConversionStrategy.java  VarCharVectorConverter.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/param/: ParamWrapper.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/reader/: AbstractReader.java  AbstractSender.java  ReadJobContext.java  Reader.java  Sender.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/repository/: CaffeineDataRepository.java  ParamWrapperRepository.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/service/: TicketService.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/service/impl/: CacheTicketService.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/spi/producer/: DataProxyFlightProducer.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/visitor/: BooleanValueVisitor.java  ByteArrayValueVisitor.java  ByteValueVisitor.java  DoubleValueVisitor.java  FloatValueVisitor.java  IntegerValueVisitor.java  LongValueVisitor.java  ShortValueVisitor.java  ValueVisitor.java
dataproxy-core/src/main/java/org/secretflow/dataproxy/core/writer/: Writer.java
dataproxy-integration-tests/src/main/java/org/secretflow/dataproxy/integration/tests/: DPFlightClient.java
dataproxy-integration-tests/src/main/java/org/secretflow/dataproxy/integration/tests/config/: OdpsKusciaConnectorConfig.java
dataproxy-plugins/: pom.xml
dataproxy-plugins/dataproxy-plugin-database/: pom.xml
dataproxy-plugins/dataproxy-plugin-database/src/main/java/org/secretflow/dataproxy/plugin/database/config/: DatabaseCommandConfig.java  DatabaseConnectConfig.java  DatabaseWriteConfig.java  EnvironmentHiveFlightConfigLoader.java  EnvironmentOracleFlightConfigLoader.java  ScqlCommandJobConfig.java
dataproxy-plugins/dataproxy-plugin-database/src/main/java/org/secretflow/dataproxy/plugin/database/converter/: DatabaseParamConverter.java
dataproxy-plugins/dataproxy-plugin-database/src/main/java/org/secretflow/dataproxy/plugin/database/producer/: DatabaseFlightProducer.java  HiveFlightProducer.java
dataproxy-plugins/dataproxy-plugin-database/src/main/java/org/secretflow/dataproxy/plugin/database/reader/: DatabaseReader.java
dataproxy-plugins/dataproxy-plugin-hive/: pom.xml
dataproxy-plugins/dataproxy-plugin-hive/src/main/java/org/secretflow/dataproxy/plugin/hive/: HiveRecordWriter.java
dataproxy-plugins/dataproxy-plugin-odps/: pom.xml
dataproxy-plugins/dataproxy-plugins-hive/: pom.xml
dataproxy-server/: pom.xml
dataproxy-server/src/main/java/org/secretflow/dataproxy/server/: DataProxyFlightServer.java  DataProxyServerApplication.java  FlightClientTest.java  FlightClientTestApplication.java  FlightServerTraceMiddleware.java  ProtoObjConvertor.java
dataproxy-server/src/main/java/org/secretflow/dataproxy/server/flight/: CompositeFlightProducer.java  ProducerRegistry.java
dataproxy-server/src/main/java/org/secretflow/dataproxy/server/flight/middleware/: FlightServerTraceMiddleware.java
dataproxy-server/src/main/resources/: logback.xml
dataproxy_sdk/: .bazelrc
dataproxy_sdk/bazel/: defs.bzl  repositories.bzl
dataproxy_sdk/cc/: BUILD.bazel  api.h  data_proxy_file.cc  data_proxy_pb.cc  data_proxy_pb.h  data_proxy_stream.cc  data_proxy_stream.h  data_proxy_stream_test.cc  defs.bzl  file_help.cc  file_help_test.cc
dataproxy_sdk/cc/dataproxy_sdk/: BUILD.bazel  api.h  data_proxy_conn.cc  data_proxy_conn.h  data_proxy_file.cc  data_proxy_file.h  data_proxy_pb.cc  data_proxy_pb.h  data_proxy_stream.cc  data_proxy_stream.h  exception.h  file_help.cc  file_help.h  utils.cc
dataproxy_sdk/cc/test/: BUILD.bazel  data_proxy_conn_test.cc  data_proxy_file_test.cc  data_proxy_pb_test.cc  data_proxy_stream_test.cc  file_help_test.cc
dataproxy_sdk/cc/test/tools/: BUILD.bazel  data_mesh_mock.cc  data_mesh_mock.h  random.cc  utils.cc  utils.h
dataproxy_sdk/proto/: BUILD.bazel  data_proxy_pb.proto
dataproxy_sdk/python/: BUILD.bazel  MODULE.bazel  defs.bzl  requirements.txt  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_9.txt  setup.py  version.bzl
dataproxy_sdk/python/dataproxy/: BUILD.bazel  _lib.cc
dataproxy_sdk/python/test/: BUILD.bazel  _dm_mock.cc  dm_mock.py  file_test.py  init_test.py  protos_test.py  stream_test.py
dataproxy_sdk/test/: BUILD.bazel  data_mesh_mock.cc
proto/kuscia/: flightdm.proto  flightinner.proto
scripts/: build_image.sh
(+78 files in other folders)
