# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = [
    "//test:__subpackages__",
])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
)

pybind_extension(
    name = "_lib",
    srcs = [
        "_lib.cc",
    ],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location :exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location :version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":version_script.lds",
        "@dataproxy_sdk_cc",
    ],
)

filegroup(
    name = "lib_so",
    srcs = [
        ":_lib.so",
    ],
)

py_library(
    name = "data_proxy_file_py",
    srcs = [
        "file_adapter.py",
    ],
    data = [
        ":lib_so",
    ],
    deps = [
        ":data_proxy_protos",
        "@dataproxy_sdk_pip//pyarrow",
    ],
)

py_library(
    name = "data_proxy_stream_py",
    srcs = [
        "stream.py",
    ],
    data = [
        ":lib_so",
    ],
    deps = [
        ":data_proxy_protos",
        "@dataproxy_sdk_pip//pyarrow",
    ],
)

py_library(
    name = "data_proxy_protos",
    srcs = [
        "protos.py",
    ],
)

py_library(
    name = "dataproxy_sdk_init",
    srcs = [
        "__init__.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":data_proxy_file_py",
        ":data_proxy_protos",
        ":data_proxy_stream_py",
    ],
)
