# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
    visibility = ["//visibility:private"],
)

pybind_extension(
    name = "_dm_mock",
    srcs = ["_dm_mock.cc"],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //dataproxy:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //dataproxy:version_script.lds)",
        ],
    }),
    deps = [
        "//dataproxy:exported_symbols.lds",
        "//dataproxy:version_script.lds",
        "@dataproxy_sdk_cc",
        "@dataproxy_sdk_cc//test/tools:data_mesh_mock",
    ],
)

filegroup(
    name = "dm_mock_so",
    srcs = [
        ":_dm_mock.so",
    ],
)

py_library(
    name = "dm_mock_py",
    srcs = [
        "dm_mock.py",
    ],
    data = [
        ":dm_mock_so",
    ],
)

py_test(
    name = "file_test",
    srcs = ["file_test.py"],
    deps = [
        ":dm_mock_py",
        "//:dataproxy_sdk_py",
    ],
)

py_test(
    name = "stream_test",
    srcs = ["stream_test.py"],
    deps = [
        ":dm_mock_py",
        "//:dataproxy_sdk_py",
    ],
)

py_test(
    name = "init_test",
    srcs = ["init_test.py"],
    deps = [
        ":dm_mock_py",
        "//:dataproxy_sdk_py",
    ],
)

py_test(
    name = "protos_test",
    srcs = ["protos_test.py"],
    deps = [
        ":dm_mock_py",
        "//:dataproxy_sdk_py",
    ],
)
